# climusic

./: .gitignore  README.md  climusic.py  pyproject.toml
climusic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
climusic_pkg/: __init__.py  __main__.py
music_agent_win.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
musicctl/: cli.py  formatter.py
musicd/: daemon.py  hotlist_kkbox.py  player.py  player_mpv.py  resolver.py  search.py  source_base.py  source_bilibili.py  source_soundcloud.py  source_youtube.py  state.py
shared/: environment.py  errors.py  ipc.py  lang.py  models.py  runtime.py  source.py  utils.py  win_compat.py
